--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <span class="close-button" id="close-button">&times;</span>
+            <img class="cer_img" src="CertificateOfCompletion_Career Essentials in Generative AI by Microsoft and LinkedIn_page-0001.jpg" alt="Certificate 1">
+            <img class="cer_img" src="CertificateOfCompletion_Introduction to Artificial Intelligence (1)_page-0001.jpg" alt="Certificate 1">
+            <img class="cer_img" src="CertificateOfCompletion_Generative AI The Evolution of Thoughtful Online Search_page-0001.jpg" alt="Certificate 1">
+            <img class="cer_img" src="CertificateOfCompletion_Ethics in the Age of Generative AI_page-0001.jpg" alt="Certificate 1">
+            <img class="cer_img" src="CertificateOfCompletion_Streamlining Your Work with Microsoft Bing Chat_page-0001.jpg" alt="Certificate 1">
+            <img class="cer_img" src="CertificateOfCompletion_What Is Generative AI_page-0001.jpg" alt="Certificate 1">
+            <img class="cer_img" src="CertificateOfCompletion_Introduction to Artificial Intelligence_page-0001.jpg" alt="Certificate 1">
             <img class="cer_img" src="CertificateOfCompletion_Data Analytics Dashboards vs. Data Stories_page-0001.jpg" alt="Certificate 1">
             <img class="cer_img" src="CertificateOfCompletion_Mindful Approaches to Defeat Distraction and Build Greater Mental Resilience_page-0001.jpg" alt="Certificate 2">
             <img class="cer_img"class="cer_img" src="CertificateOfCompletion_Social Media Stories Creative Strategies and Tips_page-0001.jpg" alt="Certificate 3">
@@ -121,6 +128,7 @@
             <img class="cer_img" src="Bank misr .jpg" alt="Certificate 3">
         </div>
     </div>
+
 
     <div id="popupVID" class="popup">
         <div class="popup-content">
