--- a/index.html
+++ b/index.html
@@ -125,8 +125,14 @@
             <img class="cer_img"class="cer_img" src="CertificateOfCompletion_Social Media Stories Creative Strategies and Tips_page-0001.jpg" alt="Certificate 3">
             <img class="cer_img" src="CertificateOfCompletion_Social Success at Work_page-0001.jpg" alt="Certificate 4">
             <img class="cer_img" src="Bank misr .jpg" alt="Certificate 3">
+            <img class="cer_img" src="financial plans_page-0001.jpg" alt="Certificate 3">
+            <img class="cer_img" src="17311-9145282_page-0001.jpg" alt="Certificate 3">
+            <img class="cer_img" src="business model_page-0001.jpg" alt="Certificate 3">
+            <img class="cer_img" src="entrepreneurship_page-0001.jpg" alt="Certificate 3">
+            <img class="cer_img" src="Implementation of small projects_page-0001.jpg" alt="Certificate 3">
         </div>
     </div>
+
 
 
     <div id="popupVID" class="popup">
