--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
         <div class="degree">
             <h3>Student</h3>
             <p>Helwan University - Egypt</p>
-            <p>Going to Level 2 as a student at the Faculty of Commerce – business information system department (BIS)
-                with a GPA of 3.876 (Excellent)</p>
+            <p>Level 2 student at the Faculty of Commerce – business
+ information system department (BIS) with a GPA of  3.852
+ (Excellent) </p>
         </div>
     </section>
 
